Update to 1.9.4