@@ -1,94 +1,97 @@
 package net.minecraft.server;
 
+import java.util.Random;
+import javax.annotation.Nullable;
+
 public class EntitySpider extends EntityMonster {
+
+    private static final DataWatcherObject<Byte> a = DataWatcher.a(EntitySpider.class, DataWatcherRegistry.a);
 
     public EntitySpider(World world) {
         super(world);
-        this.a(1.4F, 0.9F);
+        this.setSize(1.4F, 0.9F);
+    }
+
+    protected void r() {
         this.goalSelector.a(1, new PathfinderGoalFloat(this));
-        this.goalSelector.a(2, this.a);
         this.goalSelector.a(3, new PathfinderGoalLeapAtTarget(this, 0.4F));
-        this.goalSelector.a(4, new PathfinderGoalSpiderMeleeAttack(this, EntityHuman.class));
-        this.goalSelector.a(4, new PathfinderGoalSpiderMeleeAttack(this, EntityIronGolem.class));
+        this.goalSelector.a(4, new EntitySpider.PathfinderGoalSpiderMeleeAttack(this));
         this.goalSelector.a(5, new PathfinderGoalRandomStroll(this, 0.8D));
         this.goalSelector.a(6, new PathfinderGoalLookAtPlayer(this, EntityHuman.class, 8.0F));
         this.goalSelector.a(6, new PathfinderGoalRandomLookaround(this));
         this.targetSelector.a(1, new PathfinderGoalHurtByTarget(this, false, new Class[0]));
-        this.targetSelector.a(2, new PathfinderGoalSpiderNearestAttackableTarget(this, EntityHuman.class));
-        this.targetSelector.a(3, new PathfinderGoalSpiderNearestAttackableTarget(this, EntityIronGolem.class));
+        this.targetSelector.a(2, new EntitySpider.PathfinderGoalSpiderNearestAttackableTarget(this, EntityHuman.class));
+        this.targetSelector.a(3, new EntitySpider.PathfinderGoalSpiderNearestAttackableTarget(this, EntityIronGolem.class));
+    }
+
+    public double ay() {
+        return (double) (this.length * 0.5F);
     }
 
     protected NavigationAbstract b(World world) {
         return new NavigationSpider(this, world);
     }
 
-    protected void h() {
-        super.h();
-        this.datawatcher.a(16, new Byte((byte) 0));
+    protected void i() {
+        super.i();
+        this.datawatcher.register(EntitySpider.a, Byte.valueOf((byte) 0));
     }
 
-    public void s_() {
-        super.s_();
-        if (!this.world.isStatic) {
+    public void m() {
+        super.m();
+        if (!this.world.isClientSide) {
             this.a(this.positionChanged);
         }
 
     }
 
-    protected void aW() {
-        super.aW();
+    protected void initAttributes() {
+        super.initAttributes();
         this.getAttributeInstance(GenericAttributes.maxHealth).setValue(16.0D);
-        this.getAttributeInstance(GenericAttributes.d).setValue(0.30000001192092896D);
+        this.getAttributeInstance(GenericAttributes.MOVEMENT_SPEED).setValue(0.30000001192092896D);
     }
 
-    protected String z() {
-        return "mob.spider.say";
+    protected SoundEffect G() {
+        return SoundEffects.fR;
     }
 
-    protected String bn() {
-        return "mob.spider.say";
+    protected SoundEffect bS() {
+        return SoundEffects.fT;
     }
 
-    protected String bo() {
-        return "mob.spider.death";
+    protected SoundEffect bT() {
+        return SoundEffects.fS;
     }
 
     protected void a(BlockPosition blockposition, Block block) {
-        this.makeSound("mob.spider.step", 0.15F, 1.0F);
+        this.a(SoundEffects.fU, 0.15F, 1.0F);
     }
 
-    protected Item getLoot() {
-        return Items.STRING;
+    @Nullable
+    protected MinecraftKey J() {
+        return LootTables.r;
     }
 
-    protected void dropDeathLoot(boolean flag, int i) {
-        super.dropDeathLoot(flag, i);
-        if (flag && (this.random.nextInt(3) == 0 || this.random.nextInt(1 + i) > 0)) {
-            this.a(Items.SPIDER_EYE, 1);
-        }
-
+    public boolean n_() {
+        return this.o();
     }
 
-    public boolean j_() {
-        return this.n();
-    }
-
-    public void aB() {}
+    public void aQ() {}
 
     public EnumMonsterType getMonsterType() {
         return EnumMonsterType.ARTHROPOD;
     }
 
     public boolean d(MobEffect mobeffect) {
-        return mobeffect.getEffectId() == MobEffectList.POISON.id ? false : super.d(mobeffect);
+        return mobeffect.getMobEffect() == MobEffects.POISON ? false : super.d(mobeffect);
     }
 
-    public boolean n() {
-        return (this.datawatcher.getByte(16) & 1) != 0;
+    public boolean o() {
+        return (((Byte) this.datawatcher.get(EntitySpider.a)).byteValue() & 1) != 0;
     }
 
     public void a(boolean flag) {
-        byte b0 = this.datawatcher.getByte(16);
+        byte b0 = ((Byte) this.datawatcher.get(EntitySpider.a)).byteValue();
 
         if (flag) {
             b0 = (byte) (b0 | 1);
@@ -96,10 +99,11 @@ public class EntitySpider extends EntityMonster {
             b0 &= -2;
         }
 
-        this.datawatcher.watch(16, Byte.valueOf(b0));
+        this.datawatcher.set(EntitySpider.a, Byte.valueOf(b0));
     }
 
-    public GroupDataEntity prepare(DifficultyDamageScaler difficultydamagescaler, GroupDataEntity groupdataentity) {
+    @Nullable
+    public GroupDataEntity prepare(DifficultyDamageScaler difficultydamagescaler, @Nullable GroupDataEntity groupdataentity) {
         Object object = super.prepare(difficultydamagescaler, groupdataentity);
 
         if (this.world.random.nextInt(100) == 0) {
@@ -108,21 +112,21 @@ public class EntitySpider extends EntityMonster {
             entityskeleton.setPositionRotation(this.locX, this.locY, this.locZ, this.yaw, 0.0F);
             entityskeleton.prepare(difficultydamagescaler, (GroupDataEntity) null);
             this.world.addEntity(entityskeleton, org.bukkit.event.entity.CreatureSpawnEvent.SpawnReason.JOCKEY); // CraftBukkit - add SpawnReason
-            entityskeleton.mount(this);
+            entityskeleton.startRiding(this);
         }
 
         if (object == null) {
-            object = new GroupDataSpider();
+            object = new EntitySpider.GroupDataSpider();
             if (this.world.getDifficulty() == EnumDifficulty.HARD && this.world.random.nextFloat() < 0.1F * difficultydamagescaler.c()) {
-                ((GroupDataSpider) object).a(this.world.random);
+                ((EntitySpider.GroupDataSpider) object).a(this.world.random);
             }
         }
 
-        if (object instanceof GroupDataSpider) {
-            int i = ((GroupDataSpider) object).a;
+        if (object instanceof EntitySpider.GroupDataSpider) {
+            MobEffectList mobeffectlist = ((EntitySpider.GroupDataSpider) object).a;
 
-            if (i > 0 && MobEffectList.byId[i] != null) {
-                this.addEffect(new MobEffect(i, Integer.MAX_VALUE));
+            if (mobeffectlist != null) {
+                this.addEffect(new MobEffect(mobeffectlist, Integer.MAX_VALUE));
             }
         }
 
@@ -131,5 +135,62 @@ public class EntitySpider extends EntityMonster {
 
     public float getHeadHeight() {
         return 0.65F;
+    }
+
+    static class PathfinderGoalSpiderNearestAttackableTarget<T extends EntityLiving> extends PathfinderGoalNearestAttackableTarget<T> {
+
+        public PathfinderGoalSpiderNearestAttackableTarget(EntitySpider entityspider, Class<T> oclass) {
+            super(entityspider, oclass, true);
+        }
+
+        public boolean a() {
+            float f = this.e.e(1.0F);
+
+            return f >= 0.5F ? false : super.a();
+        }
+    }
+
+    static class PathfinderGoalSpiderMeleeAttack extends PathfinderGoalMeleeAttack {
+
+        public PathfinderGoalSpiderMeleeAttack(EntitySpider entityspider) {
+            super(entityspider, 1.0D, true);
+        }
+
+        public boolean b() {
+            float f = this.b.e(1.0F);
+
+            if (f >= 0.5F && this.b.getRandom().nextInt(100) == 0) {
+                this.b.setGoalTarget((EntityLiving) null);
+                return false;
+            } else {
+                return super.b();
+            }
+        }
+
+        protected double a(EntityLiving entityliving) {
+            return (double) (4.0F + entityliving.width);
+        }
+    }
+
+    public static class GroupDataSpider implements GroupDataEntity {
+
+        public MobEffectList a;
+
+        public GroupDataSpider() {}
+
+        public void a(Random random) {
+            int i = random.nextInt(5);
+
+            if (i <= 1) {
+                this.a = MobEffects.FASTER_MOVEMENT;
+            } else if (i <= 2) {
+                this.a = MobEffects.INCREASE_DAMAGE;
+            } else if (i <= 3) {
+                this.a = MobEffects.REGENERATION;
+            } else if (i <= 4) {
+                this.a = MobEffects.INVISIBILITY;
+            }
+
+        }
     }
 }
