@@ -1,5 +1,9 @@
 package net.minecraft.server;
 
+import com.google.common.base.Predicate;
+import java.util.UUID;
+import javax.annotation.Nullable;
+
 // CraftBukkit start
 import org.bukkit.craftbukkit.event.CraftEventFactory;
 import org.bukkit.event.entity.EntityTargetEvent.TargetReason;
@@ -7,19 +11,25 @@ import org.bukkit.event.entity.EntityTargetEvent.TargetReason;
 
 public class EntityWolf extends EntityTameableAnimal {
 
-    private float bm;
-    private float bn;
-    private boolean bo;
-    private boolean bp;
-    private float bq;
-    private float br;
+    private static final DataWatcherObject<Float> DATA_HEALTH = DataWatcher.a(EntityWolf.class, DataWatcherRegistry.c);
+    private static final DataWatcherObject<Boolean> bB = DataWatcher.a(EntityWolf.class, DataWatcherRegistry.h);
+    private static final DataWatcherObject<Integer> bC = DataWatcher.a(EntityWolf.class, DataWatcherRegistry.b);
+    private float bD;
+    private float bE;
+    private boolean bF;
+    private boolean bG;
+    private float bH;
+    private float bI;
 
     public EntityWolf(World world) {
         super(world);
-        this.a(0.6F, 0.8F);
-        ((Navigation) this.getNavigation()).a(true);
+        this.setSize(0.6F, 0.85F);
+        this.setTamed(false);
+    }
+
+    protected void r() {
         this.goalSelector.a(1, new PathfinderGoalFloat(this));
-        this.goalSelector.a(2, this.bk);
+        this.goalSelector.a(2, this.goalSit = new PathfinderGoalSit(this));
         this.goalSelector.a(3, new PathfinderGoalLeapAtTarget(this, 0.4F));
         this.goalSelector.a(4, new PathfinderGoalMeleeAttack(this, 1.0D, true));
         this.goalSelector.a(5, new PathfinderGoalFollowOwner(this, 1.0D, 10.0F, 2.0F));
@@ -31,58 +41,69 @@ public class EntityWolf extends EntityTameableAnimal {
         this.targetSelector.a(1, new PathfinderGoalOwnerHurtByTarget(this));
         this.targetSelector.a(2, new PathfinderGoalOwnerHurtTarget(this));
         this.targetSelector.a(3, new PathfinderGoalHurtByTarget(this, true, new Class[0]));
-        this.targetSelector.a(4, new PathfinderGoalRandomTargetNonTamed(this, EntityAnimal.class, false, new EntitySelectorWolfTargetSheepRabbit(this)));
+        this.targetSelector.a(4, new PathfinderGoalRandomTargetNonTamed(this, EntityAnimal.class, false, new Predicate() {
+            public boolean a(@Nullable Entity entity) {
+                return entity instanceof EntitySheep || entity instanceof EntityRabbit;
+            }
+
+            public boolean apply(Object object) {
+                return this.a((Entity) object);
+            }
+        }));
         this.targetSelector.a(5, new PathfinderGoalNearestAttackableTarget(this, EntitySkeleton.class, false));
-        this.setTamed(false);
     }
 
-    protected void aW() {
-        super.aW();
-        this.getAttributeInstance(GenericAttributes.d).setValue(0.30000001192092896D);
+    protected void initAttributes() {
+        super.initAttributes();
+        this.getAttributeInstance(GenericAttributes.MOVEMENT_SPEED).setValue(0.30000001192092896D);
         if (this.isTamed()) {
             this.getAttributeInstance(GenericAttributes.maxHealth).setValue(20.0D);
         } else {
             this.getAttributeInstance(GenericAttributes.maxHealth).setValue(8.0D);
         }
 
-        this.getAttributeMap().b(GenericAttributes.e);
-        this.getAttributeInstance(GenericAttributes.e).setValue(2.0D);
+        this.getAttributeMap().b(GenericAttributes.ATTACK_DAMAGE).setValue(2.0D);
     }
 
-    public void setGoalTarget(EntityLiving entityliving) {
+    // CraftBukkit - add overriden version
+    @Override
+    public boolean setGoalTarget(EntityLiving entityliving, org.bukkit.event.entity.EntityTargetEvent.TargetReason reason, boolean fire) {
+        if (!super.setGoalTarget(entityliving, reason, fire)) {
+            return false;
+        }
+        entityliving = getGoalTarget();
+        if (entityliving == null) {
+            this.setAngry(false);
+        } else if (!this.isTamed()) {
+            this.setAngry(true);
+        }
+        return true;
+    }
+    // CraftBukkit end
+
+    public void setGoalTarget(@Nullable EntityLiving entityliving) {
         super.setGoalTarget(entityliving);
         if (entityliving == null) {
             this.setAngry(false);
         } else if (!this.isTamed()) {
             this.setAngry(true);
         }
+
     }
 
-    // CraftBukkit - add overriden version
-    @Override
-    public void setGoalTarget(EntityLiving entityliving, org.bukkit.event.entity.EntityTargetEvent.TargetReason reason, boolean fire) {
-        super.setGoalTarget(entityliving, reason, fire);
-        if (entityliving == null) {
-            this.setAngry(false);
-        } else if (!this.isTamed()) {
-            this.setAngry(true);
-        }
-    }
-    // CraftBukkit end
-
-    protected void E() {
-        this.datawatcher.watch(18, Float.valueOf(this.getHealth()));
+    protected void M() {
+        this.datawatcher.set(EntityWolf.DATA_HEALTH, Float.valueOf(this.getHealth()));
     }
 
-    protected void h() {
-        super.h();
-        this.datawatcher.a(18, new Float(this.getHealth()));
-        this.datawatcher.a(19, new Byte((byte) 0));
-        this.datawatcher.a(20, new Byte((byte) EnumColor.RED.getColorIndex()));
+    protected void i() {
+        super.i();
+        this.datawatcher.register(EntityWolf.DATA_HEALTH, Float.valueOf(this.getHealth()));
+        this.datawatcher.register(EntityWolf.bB, Boolean.valueOf(false));
+        this.datawatcher.register(EntityWolf.bC, Integer.valueOf(EnumColor.RED.getInvColorIndex()));
     }
 
     protected void a(BlockPosition blockposition, Block block) {
-        this.makeSound("mob.wolf.step", 0.15F, 1.0F);
+        this.a(SoundEffects.gS, 0.15F, 1.0F);
     }
 
     public void b(NBTTagCompound nbttagcompound) {
@@ -100,73 +121,73 @@ public class EntityWolf extends EntityTameableAnimal {
 
     }
 
-    protected String z() {
-        // CraftBukkit - (getFloat(18) < 10) -> (getFloat(18) < this.getMaxHealth() / 2)
-        return this.isAngry() ? "mob.wolf.growl" : (this.random.nextInt(3) == 0 ? (this.isTamed() && this.datawatcher.getFloat(18) < this.getMaxHealth() / 2 ? "mob.wolf.whine" : "mob.wolf.panting") : "mob.wolf.bark");
+    protected SoundEffect G() {
+        return this.isAngry() ? SoundEffects.gN : (this.random.nextInt(3) == 0 ? (this.isTamed() && ((Float) this.datawatcher.get(EntityWolf.DATA_HEALTH)).floatValue() < 10.0F ? SoundEffects.gT : SoundEffects.gQ) : SoundEffects.gL);
     }
 
-    protected String bn() {
-        return "mob.wolf.hurt";
+    protected SoundEffect bS() {
+        return SoundEffects.gP;
     }
 
-    protected String bo() {
-        return "mob.wolf.death";
+    protected SoundEffect bT() {
+        return SoundEffects.gM;
     }
 
-    protected float bA() {
+    protected float ce() {
         return 0.4F;
     }
 
-    protected Item getLoot() {
-        return Item.getById(-1);
+    @Nullable
+    protected MinecraftKey J() {
+        return LootTables.J;
     }
 
-    public void m() {
-        super.m();
-        if (!this.world.isStatic && this.bo && !this.bp && !this.cd() && this.onGround) {
-            this.bp = true;
-            this.bq = 0.0F;
-            this.br = 0.0F;
+    public void n() {
+        super.n();
+        if (!this.world.isClientSide && this.bF && !this.bG && !this.cU() && this.onGround) {
+            this.bG = true;
+            this.bH = 0.0F;
+            this.bI = 0.0F;
             this.world.broadcastEntityEffect(this, (byte) 8);
         }
 
-        if (!this.world.isStatic && this.getGoalTarget() == null && this.isAngry()) {
+        if (!this.world.isClientSide && this.getGoalTarget() == null && this.isAngry()) {
             this.setAngry(false);
         }
 
     }
 
-    public void s_() {
-        super.s_();
-        this.bn = this.bm;
-        if (this.cv()) {
-            this.bm += (1.0F - this.bm) * 0.4F;
+    public void m() {
+        super.m();
+        this.bE = this.bD;
+        if (this.dm()) {
+            this.bD += (1.0F - this.bD) * 0.4F;
         } else {
-            this.bm += (0.0F - this.bm) * 0.4F;
+            this.bD += (0.0F - this.bD) * 0.4F;
         }
 
-        if (this.U()) {
-            this.bo = true;
-            this.bp = false;
-            this.bq = 0.0F;
-            this.br = 0.0F;
-        } else if ((this.bo || this.bp) && this.bp) {
-            if (this.bq == 0.0F) {
-                this.makeSound("mob.wolf.shake", this.bA(), (this.random.nextFloat() - this.random.nextFloat()) * 0.2F + 1.0F);
+        if (this.ah()) {
+            this.bF = true;
+            this.bG = false;
+            this.bH = 0.0F;
+            this.bI = 0.0F;
+        } else if ((this.bF || this.bG) && this.bG) {
+            if (this.bH == 0.0F) {
+                this.a(SoundEffects.gR, this.ce(), (this.random.nextFloat() - this.random.nextFloat()) * 0.2F + 1.0F);
             }
 
-            this.br = this.bq;
-            this.bq += 0.05F;
-            if (this.br >= 2.0F) {
-                this.bo = false;
-                this.bp = false;
-                this.br = 0.0F;
-                this.bq = 0.0F;
+            this.bI = this.bH;
+            this.bH += 0.05F;
+            if (this.bI >= 2.0F) {
+                this.bF = false;
+                this.bG = false;
+                this.bI = 0.0F;
+                this.bH = 0.0F;
             }
 
-            if (this.bq > 0.4F) {
+            if (this.bH > 0.4F) {
                 float f = (float) this.getBoundingBox().b;
-                int i = (int) (MathHelper.sin((this.bq - 0.4F) * 3.1415927F) * 7.0F);
+                int i = (int) (MathHelper.sin((this.bH - 0.4F) * 3.1415927F) * 7.0F);
 
                 for (int j = 0; j < i; ++j) {
                     float f1 = (this.random.nextFloat() * 2.0F - 1.0F) * this.width * 0.5F;
@@ -183,8 +204,8 @@ public class EntityWolf extends EntityTameableAnimal {
         return this.length * 0.8F;
     }
 
-    public int bP() {
-        return this.isSitting() ? 20 : super.bP();
+    public int N() {
+        return this.isSitting() ? 20 : super.N();
     }
 
     public boolean damageEntity(DamageSource damagesource, float f) {
@@ -193,7 +214,11 @@ public class EntityWolf extends EntityTameableAnimal {
         } else {
             Entity entity = damagesource.getEntity();
 
-            this.bk.setSitting(false);
+            if (this.goalSit != null) {
+                // CraftBukkit - moved into EntityLiving.d(DamageSource, float)
+                // PAIL : checkme
+                // this.goalSit.setSitting(false);
+            }
             if (entity != null && !(entity instanceof EntityHuman) && !(entity instanceof EntityArrow)) {
                 f = (f + 1.0F) / 2.0F;
             }
@@ -202,8 +227,8 @@ public class EntityWolf extends EntityTameableAnimal {
         }
     }
 
-    public boolean r(Entity entity) {
-        boolean flag = entity.damageEntity(DamageSource.mobAttack(this), (float) ((int) this.getAttributeInstance(GenericAttributes.e).getValue()));
+    public boolean B(Entity entity) {
+        boolean flag = entity.damageEntity(DamageSource.mobAttack(this), (float) ((int) this.getAttributeInstance(GenericAttributes.ATTACK_DAMAGE).getValue()));
 
         if (flag) {
             this.a((EntityLiving) this, entity);
@@ -220,27 +245,21 @@ public class EntityWolf extends EntityTameableAnimal {
             this.getAttributeInstance(GenericAttributes.maxHealth).setValue(8.0D);
         }
 
-        this.getAttributeInstance(GenericAttributes.e).setValue(4.0D);
+        this.getAttributeInstance(GenericAttributes.ATTACK_DAMAGE).setValue(4.0D);
     }
 
-    public boolean a(EntityHuman entityhuman) {
-        ItemStack itemstack = entityhuman.inventory.getItemInHand();
-
+    public boolean a(EntityHuman entityhuman, EnumHand enumhand, @Nullable ItemStack itemstack) {
         if (this.isTamed()) {
             if (itemstack != null) {
                 if (itemstack.getItem() instanceof ItemFood) {
                     ItemFood itemfood = (ItemFood) itemstack.getItem();
 
-                    if (itemfood.g() && this.datawatcher.getFloat(18) < 20.0F) {
+                    if (itemfood.g() && ((Float) this.datawatcher.get(EntityWolf.DATA_HEALTH)).floatValue() < 20.0F) {
                         if (!entityhuman.abilities.canInstantlyBuild) {
                             --itemstack.count;
                         }
 
                         this.heal((float) itemfood.getNutrition(itemstack), org.bukkit.event.entity.EntityRegainHealthEvent.RegainReason.EATING); // CraftBukkit
-                        if (itemstack.count <= 0) {
-                            entityhuman.inventory.setItem(entityhuman.inventory.itemInHandIndex, (ItemStack) null);
-                        }
-
                         return true;
                     }
                 } else if (itemstack.getItem() == Items.DYE) {
@@ -248,8 +267,8 @@ public class EntityWolf extends EntityTameableAnimal {
 
                     if (enumcolor != this.getCollarColor()) {
                         this.setCollarColor(enumcolor);
-                        if (!entityhuman.abilities.canInstantlyBuild && --itemstack.count <= 0) {
-                            entityhuman.inventory.setItem(entityhuman.inventory.itemInHandIndex, (ItemStack) null);
+                        if (!entityhuman.abilities.canInstantlyBuild) {
+                            --itemstack.count;
                         }
 
                         return true;
@@ -257,10 +276,10 @@ public class EntityWolf extends EntityTameableAnimal {
                 }
             }
 
-            if (this.e((EntityLiving) entityhuman) && !this.world.isStatic && !this.d(itemstack)) {
-                this.bk.setSitting(!this.isSitting());
-                this.aW = false;
-                this.navigation.n();
+            if (this.d((EntityLiving) entityhuman) && !this.world.isClientSide && !this.e(itemstack)) {
+                this.goalSit.setSitting(!this.isSitting());
+                this.bd = false;
+                this.navigation.o();
                 this.setGoalTarget((EntityLiving) null, TargetReason.FORGOT_TARGET, true); // CraftBukkit - reason
             }
         } else if (itemstack != null && itemstack.getItem() == Items.BONE && !this.isAngry()) {
@@ -268,23 +287,20 @@ public class EntityWolf extends EntityTameableAnimal {
                 --itemstack.count;
             }
 
-            if (itemstack.count <= 0) {
-                entityhuman.inventory.setItem(entityhuman.inventory.itemInHandIndex, (ItemStack) null);
-            }
-
-            if (!this.world.isStatic) {
+            if (!this.world.isClientSide) {
                 // CraftBukkit - added event call and isCancelled check.
                 if (this.random.nextInt(3) == 0 && !CraftEventFactory.callEntityTameEvent(this, entityhuman).isCancelled()) {
                     this.setTamed(true);
-                    this.navigation.n();
-                    this.setGoalTarget((EntityLiving) null, TargetReason.FORGOT_TARGET, true);
-                    this.bk.setSitting(true);
+                    this.navigation.o();
+                    this.setGoalTarget((EntityLiving) null);
+                    this.goalSit.setSitting(true);
+                    this.setHealth(20.0F);
                     this.setHealth(this.getMaxHealth()); // CraftBukkit - 20.0 -> getMaxHealth()
-                    this.setOwnerUUID(entityhuman.getUniqueID().toString());
-                    this.l(true);
+                    this.setOwnerUUID(entityhuman.getUniqueID());
+                    this.o(true);
                     this.world.broadcastEntityEffect(this, (byte) 7);
                 } else {
-                    this.l(false);
+                    this.o(false);
                     this.world.broadcastEntityEffect(this, (byte) 6);
                 }
             }
@@ -292,59 +308,54 @@ public class EntityWolf extends EntityTameableAnimal {
             return true;
         }
 
-        return super.a(entityhuman);
+        return super.a(entityhuman, enumhand, itemstack);
     }
 
-    public boolean d(ItemStack itemstack) {
+    public boolean e(@Nullable ItemStack itemstack) {
         return itemstack == null ? false : (!(itemstack.getItem() instanceof ItemFood) ? false : ((ItemFood) itemstack.getItem()).g());
     }
 
-    public int bU() {
+    public int cK() {
         return 8;
     }
 
     public boolean isAngry() {
-        return (this.datawatcher.getByte(16) & 2) != 0;
+        return (((Byte) this.datawatcher.get(EntityWolf.bw)).byteValue() & 2) != 0;
     }
 
     public void setAngry(boolean flag) {
-        byte b0 = this.datawatcher.getByte(16);
+        byte b0 = ((Byte) this.datawatcher.get(EntityWolf.bw)).byteValue();
 
         if (flag) {
-            this.datawatcher.watch(16, Byte.valueOf((byte) (b0 | 2)));
+            this.datawatcher.set(EntityWolf.bw, Byte.valueOf((byte) (b0 | 2)));
         } else {
-            this.datawatcher.watch(16, Byte.valueOf((byte) (b0 & -3)));
+            this.datawatcher.set(EntityWolf.bw, Byte.valueOf((byte) (b0 & -3)));
         }
 
     }
 
     public EnumColor getCollarColor() {
-        return EnumColor.fromInvColorIndex(this.datawatcher.getByte(20) & 15);
+        return EnumColor.fromInvColorIndex(((Integer) this.datawatcher.get(EntityWolf.bC)).intValue() & 15);
     }
 
     public void setCollarColor(EnumColor enumcolor) {
-        this.datawatcher.watch(20, Byte.valueOf((byte) (enumcolor.getInvColorIndex() & 15)));
+        this.datawatcher.set(EntityWolf.bC, Integer.valueOf(enumcolor.getInvColorIndex()));
     }
 
     public EntityWolf b(EntityAgeable entityageable) {
         EntityWolf entitywolf = new EntityWolf(this.world);
-        String s = this.getOwnerUUID();
+        UUID uuid = this.getOwnerUUID();
 
-        if (s != null && s.trim().length() > 0) {
-            entitywolf.setOwnerUUID(s);
+        if (uuid != null) {
+            entitywolf.setOwnerUUID(uuid);
             entitywolf.setTamed(true);
         }
 
         return entitywolf;
     }
 
-    public void p(boolean flag) {
-        if (flag) {
-            this.datawatcher.watch(19, Byte.valueOf((byte) 1));
-        } else {
-            this.datawatcher.watch(19, Byte.valueOf((byte) 0));
-        }
-
+    public void s(boolean flag) {
+        this.datawatcher.set(EntityWolf.bB, Boolean.valueOf(flag));
     }
 
     public boolean mate(EntityAnimal entityanimal) {
@@ -357,12 +368,12 @@ public class EntityWolf extends EntityTameableAnimal {
         } else {
             EntityWolf entitywolf = (EntityWolf) entityanimal;
 
-            return !entitywolf.isTamed() ? false : (entitywolf.isSitting() ? false : this.cp() && entitywolf.cp());
+            return !entitywolf.isTamed() ? false : (entitywolf.isSitting() ? false : this.isInLove() && entitywolf.isInLove());
         }
     }
 
-    public boolean cv() {
-        return this.datawatcher.getByte(19) == 1;
+    public boolean dm() {
+        return ((Boolean) this.datawatcher.get(EntityWolf.bB)).booleanValue();
     }
 
     protected boolean isTypeNotPersistent() {
@@ -379,14 +390,14 @@ public class EntityWolf extends EntityTameableAnimal {
                 }
             }
 
-            return entityliving instanceof EntityHuman && entityliving1 instanceof EntityHuman && !((EntityHuman) entityliving1).a((EntityHuman) entityliving) ? false : !(entityliving instanceof EntityHorse) || !((EntityHorse) entityliving).isTame();
+            return entityliving instanceof EntityHuman && entityliving1 instanceof EntityHuman && !((EntityHuman) entityliving1).a((EntityHuman) entityliving) ? false : !(entityliving instanceof EntityHorse) || !((EntityHorse) entityliving).isTamed();
         } else {
             return false;
         }
     }
 
-    public boolean ca() {
-        return !this.isAngry() && super.ca();
+    public boolean a(EntityHuman entityhuman) {
+        return !this.isAngry() && super.a(entityhuman);
     }
 
     public EntityAgeable createChild(EntityAgeable entityageable) {
